# DongTai-agent-python

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  MANIFEST.in  README.ZH_CN.md  README.md  setup.cfg  setup.py
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  codeql-analysis.yml  release-agent.yml  update-test-agent.yml  vul-test.yml
dongtai_agent_python/: __init__.py  config-example.json  config.json  global_var.py  policy.json  policy_api.json
dongtai_agent_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dongtai_agent_python/api/: openapi.py
dongtai_agent_python/assess/: c_api_hook.py  common_hook.py  ctypes_hook.py  deal_data.py  patch.py
dongtai_agent_python/assess_ext/: .gitignore  c_api.c  logger.c  patch.c
dongtai_agent_python/assess_ext/include/: c_api.h  logger.h  patch.h  utils.h
dongtai_agent_python/assess_ext/patch/: cast.c  concat.c  str_cformat.c  str_fstring.c
dongtai_agent_python/cli/: __init__.py  run.py
dongtai_agent_python/common/: common_hook.py  content_tracert.py  ctypes_hook.py  default_data.py  logger.py  origin.py  utils.py
dongtai_agent_python/context/: __init__.py  request.py  request_context.py  tracker.py
dongtai_agent_python/middlewares/: __init__.py  base_middleware.py  django_middleware.py  django_wsgi_middleware.py  flask_middleware.py  flask_wsgi_middleware.py  wsgi_middleware.py
dongtai_agent_python/policy/: deal_data.py  policy.py  tracking.py
dongtai_agent_python/report/: upload_data.py
dongtai_agent_python/setting/: __init__.py  config.py  const.py  setting.py
dongtai_agent_python/tests/: vul-test.sh
dongtai_agent_python/tests/policy/: test_policy.py  test_tracking.py
dongtai_agent_python/tests/setting/: setting_test.py  test_setting.py
dongtai_agent_python/tests/utils/: scope_test.py  (+4 more)
dongtai_agent_python/utils/: __init__.py  lock.py  scope.py  singleton.py  system_info.py  utils.py
scripts/: dongtai-cli
(+2 files in other folders)
