[metadata]
name = dongtai_agent_python
version = 1.1.4
description = DongTai IAST Agent for Python
long_description = file: README.md
url = https://iast.huoxian.cn
author = songjinghao
author_email = jinghaosong@huoxian.cn
license = GPL-3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    psutil >= 5.8.0
    requests >= 2.25.1
    pip >= 19.2.3
