[metadata]
name = dongtai_agent_python
version = attr: dongtai_agent_python.version.__version__
description = DongTai IAST Agent for Python
long_description = file: README.md
url = https://dongtai.io
author = songjinghao
author_email = jinghaosong@huoxian.cn
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    psutil >= 5.8.0
    requests >= 2.25.1
    pip >= 19.2.3
    shared-memory38 >= 0.1.2; python_version <= '3.7'
;    regexploit >= 1.0.0
